--- a/package.json
+++ b/package.json
@@ -16,5 +16,11 @@
   "bugs": {
     "url": "https://github.com/cristinaruiz21/ThoughtBubble/issues"
   },
-  "homepage": "https://github.com/cristinaruiz21/ThoughtBubble#readme"
+  "homepage": "https://github.com/cristinaruiz21/ThoughtBubble#readme",
+  "dependencies": {
+    "axios": "^0.21.0",
+    "express": "^4.17.1",
+    "if-env": "^1.0.4",
+    "mongoose": "^5.11.0"
+  }
 }
