--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "axios": "^0.21.0",
     "express": "^4.17.1",
     "if-env": "^1.0.4",
-    "mongoose": "^5.11.0"
+    "mongoose": "^5.11.0",
+    "react-router-dom": "^5.2.0"
   }
 }
