--- a/package.json
+++ b/package.json
@@ -25,12 +25,17 @@
   "homepage": "https://github.com/cristinaruiz21/ThoughtBubble#readme",
   "dependencies": {
     "axios": "^0.21.0",
+    "bcryptjs": "^2.4.3",
     "cloudinary": "^1.23.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "express-session": "^1.17.1",
     "if-env": "^1.0.4",
     "mongoose": "^5.11.0",
+    "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "react-router-dom": "^5.2.0"
   },
   "devDependencies": {
